updated start and proxy configuration

--- a/pivproxy.conf
+++ b/pivproxy.conf
@@ -26,8 +26,8 @@ SSLSessionCache "shmcb:logs/ssl_cache(512000)"
   SSLHonorCipherOrder on
 
   # set the certificate and private key for this service/route
-  SSLCertificateFile /secrets/tls.crt
-  SSLCertificateKeyFile /secrets/tls.key
+  SSLCertificateFile /etc/pki/tls/private/tls.crt
+  SSLCertificateKeyFile /etc/pki/tls/private/tls.key
 
   # This is the CA against which user's certificates will be checked.
   SSLCACertificateFile /secrets/smartcard-ca.crt
@@ -46,8 +46,8 @@ SSLSessionCache "shmcb:logs/ssl_cache(512000)"
   SSLProxyEngine on
 
   # created (as in the docs) by creating a proxy CA that is signed by the openshift master CA and then using that to create client crt and key for this node
-  SSLProxyCACertificateFile /etc/pki/CA/certs/ocp-master-ca.crt
-  SSLProxyMachineCertificateFile /etc/pki/tls/certs/authproxy.pem
+  SSLProxyCACertificateFile /run/secrets/kubernetes.io/serviceaccount/ca.crt
+  SSLProxyMachineCertificateFile /tmp/proxy_client.pem
 
   ErrorLog logs/ssl_error_log
   LogLevel debug
