--- a/pivproxy.conf
+++ b/pivproxy.conf
@@ -26,11 +26,11 @@ SSLSessionCache "shmcb:logs/ssl_cache(512000)"
   SSLHonorCipherOrder on
 
   # set the certificate and private key for this service/route
-  SSLCertificateFile /etc/pki/tls/private/tls.crt
-  SSLCertificateKeyFile /etc/pki/tls/private/tls.key
+  SSLCertificateFile ${SECRET_DIR}/tls.crt
+  SSLCertificateKeyFile ${SECRET_DIR}/tls.key
 
   # This is the CA against which user's certificates will be checked.
-  SSLCACertificateFile /secrets/smartcard-ca.crt
+  SSLCACertificateFile ${SECRET_DIR}/smartcard-ca.crt
 
   # set up variables and export them
   SSLUserName SSL_CLIENT_S_DN_CN
