removed really unused environment variable aligned directories better`

--- a/pivproxy.conf
+++ b/pivproxy.conf
@@ -26,11 +26,11 @@ SSLSessionCache "shmcb:logs/ssl_cache(512000)"
   SSLHonorCipherOrder on
 
   # set the certificate and private key for this service/route
-  SSLCertificateFile ${SECRET_DIR}/tls.crt
-  SSLCertificateKeyFile ${SECRET_DIR}/tls.key
+  SSLCertificateFile /secrets/tls.crt
+  SSLCertificateKeyFile /secrets/tls.key
 
   # This is the CA against which user's certificates will be checked.
-  SSLCACertificateFile ${SECRET_DIR}/smartcard-ca.crt
+  SSLCACertificateFile /piv/smartcard-ca.crt
 
   # set up variables and export them
   SSLUserName SSL_CLIENT_S_DN_CN
