updated proxy conf

--- a/pivproxy.conf
+++ b/pivproxy.conf
@@ -1,3 +1,7 @@
+# set global server name
+ServerName ${HOSTNAME}
+
+# module
 LoadModule request_module modules/mod_request.so
 
 # set ssl session cache location
