slight optimization to dockerfile logging to stderr/stdout

--- a/pivproxy.conf
+++ b/pivproxy.conf
@@ -1,6 +1,10 @@
 # set global server name
 ServerName ${HOSTNAME}
 
+# set log to stdout/stderr
+ErrorLog /dev/stderr
+TransferLog /dev/stdout
+
 # module
 LoadModule request_module modules/mod_request.so
 
