cleaned up ssl configuration for a single host

--- a/pivproxy.conf
+++ b/pivproxy.conf
@@ -1,5 +1,13 @@
+# listen to 8443
+Listen 8443 https
+
 # set global server name
 ServerName ${HOSTNAME}
+
+# copied from default ssl.conf
+SSLRandomSeed startup file:/dev/urandom  256
+SSLRandomSeed connect builtin
+SSLCryptoDevice builtin
 
 # set log to stdout/stderr
 ErrorLog /dev/stderr
@@ -10,6 +18,7 @@ LoadModule request_module modules/mod_request.so
 
 # set ssl session cache location
 SSLSessionCache "shmcb:logs/ssl_cache(512000)"
+SSLSessionCacheTimeout  300
 
 # Nothing needs to be served over HTTP. This virtual host simply redirects to
 # HTTPS.
