proxy configuration closer to complete

--- a/pivproxy.conf
+++ b/pivproxy.conf
@@ -31,7 +31,7 @@ SSLSessionCacheTimeout  300
 <VirtualHost *:8443>
   # server name and aliases for SNI
   ServerName ${HOSTNAME}
-  ServerAlias ${MASTER_PUBLIC_URL}
+  ServerAlias ${MASTER_PUBLIC_URL},${HOSTNAME}
 
   # root where documents are served from
   DocumentRoot /var/www/html
