--- a/pivproxy.conf
+++ b/pivproxy.conf
@@ -64,7 +64,7 @@ SSLSessionCacheTimeout  300
 
   # created (as in the docs) by creating a proxy CA that is signed by the openshift master CA and then using that to create client crt and key for this node
   SSLProxyCACertificateFile /run/secrets/kubernetes.io/serviceaccount/ca.crt
-  SSLProxyMachineCertificateFile /tmp/proxy_client.pem
+  SSLProxyMachineCertificateFile /run/secrets/kubernetes.io/serviceaccount/service-ca.crt
 
   ErrorLog logs/ssl_error_log
   LogLevel debug
