--- a/passwd.template
+++ b/passwd.template
@@ -11,4 +11,4 @@ operator:x:11:0:operator:/root:/sbin/nologin
 games:x:12:100:games:/usr/games:/sbin/nologin
 ftp:x:14:50:FTP User:/var/ftp:/sbin/nologin
 nobody:x:99:99:Nobody:/:/sbin/nologin
-apache:x:${USER_ID}:${GROUP_ID}:apache user:${HOME}:/bin/bash
+apache:x:${USER_ID}:${GROUP_ID}:apache user:/apache:/bin/bash
