adding additional logging to stdout

--- a/pivproxy.conf
+++ b/pivproxy.conf
@@ -68,8 +68,8 @@ SSLSessionCacheTimeout  300
 
   ErrorLog logs/ssl_error_log
   LogLevel debug
-  CustomLog logs/ssl_request_log "%t %h %{SSL_PROTOCOL}x %{SSL_CIPHER}x \"%r\" %b"
-  #TransferLog logs/ssl_access_log
+  CustomLog /dev/stdout "%t %h %{SSL_PROTOCOL}x %{SSL_CIPHER}x \"%r\" %b"
+  TransferLog /dev/stdout
   
   #LogLevel debug
   #CustomLog logs/ssl_request_log "%t %h %{SSL_PROTOCOL}x %{SSL_CIPHER}x \"%r\" %b"
