updated rewrite rule with port

--- a/pivproxy.conf
+++ b/pivproxy.conf
@@ -25,7 +25,7 @@ SSLSessionCacheTimeout  300
 <VirtualHost *:8080>
   DocumentRoot /var/www/html
   RewriteEngine On
-  RewriteRule ^(.*)$ https://%{HTTP_HOST}$1 [R,L]
+  RewriteRule ^(.*)$ https://%{HTTP_HOST}:8443$1 [R,L]
 </VirtualHost>
 
 <VirtualHost *:8443>
