new build with more variables and hostname stuff

--- a/pivproxy.conf
+++ b/pivproxy.conf
@@ -25,16 +25,19 @@ SSLSessionCacheTimeout  300
 <VirtualHost *:8080>
   DocumentRoot /var/www/html
   RewriteEngine On
-  RewriteRule ^(.*)$ https://%{HTTP_HOST}:8443$1 [R,L]
+  RewriteRule ^(.*)$ https://%{PIVPROXY_PUBLIC_URL}:8443$1 [R,L]
 </VirtualHost>
 
 <VirtualHost *:8443>
   # server name and aliases for SNI
   ServerName ${HOSTNAME}
-  ServerAlias ${MASTER_PUBLIC_URL},${HOSTNAME}
+  ServerAlias ${PIVPROXY_PUBLIC_URL},${HOSTNAME},${BASE_NAME}.${CURRENT_NAMESPACE}.svc.cluster.local,${BASE_NAME}.${CURRENT_NAMESPACE},${BASE_NAME}
 
   # root where documents are served from
   DocumentRoot /var/www/html
+
+  # turn off indexes
+  Options -Indexes
   
   # enable the SSL engine and set the SSL TLS level and cipher suite
   SSLEngine on
