updated proxy conf for a little more clarity

--- a/pivproxy.conf
+++ b/pivproxy.conf
@@ -4,6 +4,9 @@ Listen 8443 https
 # set global server name
 ServerName ${HOSTNAME}
 
+# turn off indexes (todo: does this work?)
+Options -Indexes
+
 # copied from default ssl.conf
 SSLRandomSeed startup file:/dev/urandom  256
 SSLRandomSeed connect builtin
@@ -31,14 +34,11 @@ SSLSessionCacheTimeout  300
 <VirtualHost *:8443>
   # server name and aliases for SNI
   ServerName ${HOSTNAME}
-  ServerAlias ${PIVPROXY_PUBLIC_URL},${HOSTNAME},${BASE_NAME}.${CURRENT_NAMESPACE}.svc.cluster.local,${BASE_NAME}.${CURRENT_NAMESPACE},${BASE_NAME}
+  ServerAlias ${PIVPROXY_PUBLIC_URL},${HOSTNAME},${BASE_NAME}.${CURRENT_NAMESPACE}.svc.cluster.local,${BASE_NAME}.${CURRENT_NAMESPACE}.svc,${BASE_NAME}
 
   # root where documents are served from
   DocumentRoot /var/www/html
 
-  # turn off indexes
-  Options -Indexes
-  
   # enable the SSL engine and set the SSL TLS level and cipher suite
   SSLEngine on
   SSLProtocol +TLSv1.2
@@ -69,7 +69,8 @@ SSLSessionCacheTimeout  300
   SSLProxyCACertificateFile /run/secrets/kubernetes.io/serviceaccount/ca.crt
   #SSLProxyMachineCertificateFile /tmp/proxy_client.pem
 
-  ErrorLog logs/ssl_error_log
+  # set up additional logging (todo: does this matter?)
+  ErrorLog /dev/stdout
   LogLevel debug
   CustomLog /dev/stdout "%t %h %{SSL_PROTOCOL}x %{SSL_CIPHER}x \"%r\" %b"
   TransferLog /dev/stdout
