revert to using /tmp

--- a/pivproxy.conf
+++ b/pivproxy.conf
@@ -67,7 +67,7 @@ SSLSessionCacheTimeout  300
 
   # created (as in the docs) by creating a proxy CA that is signed by the openshift master CA and then using that to create client crt and key for this node
   SSLProxyCACertificateFile /run/secrets/kubernetes.io/serviceaccount/ca.crt
-  SSLProxyMachineCertificateFile /apache/proxy_client.pem
+  SSLProxyMachineCertificateFile /tmp/proxy_client.pem
 
   # set up additional logging (todo: does this matter?)
   ErrorLog /dev/stdout
