--- a/pivproxy.conf
+++ b/pivproxy.conf
@@ -67,6 +67,7 @@ SSLSessionCacheTimeout  300
 
   # created (as in the docs) by creating a proxy CA that is signed by the openshift master CA and then using that to create client crt and key for this node
   SSLProxyCACertificateFile /run/secrets/kubernetes.io/serviceaccount/ca.crt
+  SSLProxyMachineCertificateChainFile /run/secrets/kubernetes.io/serviceaccount/service-ca.crt
   SSLProxyMachineCertificateFile /tmp/proxy_client.pem
 
   # set up additional logging (todo: does this matter?)
