changed server name

--- a/pivproxy.conf
+++ b/pivproxy.conf
@@ -32,8 +32,8 @@ SSLSessionCacheTimeout  300
 </VirtualHost>
 
 <VirtualHost *:8443>
-  # server name and aliases for SNI
-  ServerName ${HOSTNAME}
+  # server name and aliases for SNI and for client contact
+  ServerName ${BASE_NAME}.${CURRENT_NAMESPACE}.svc
   ServerAlias ${PIVPROXY_PUBLIC_URL},${HOSTNAME},${BASE_NAME}.${CURRENT_NAMESPACE}.svc.cluster.local,${BASE_NAME}.${CURRENT_NAMESPACE}.svc,${BASE_NAME}
 
   # root where documents are served from
@@ -62,8 +62,10 @@ SSLSessionCacheTimeout  300
   # max verification depth	
   SSLVerifyDepth 5 
 
-  # trn on the proxy engine for the clients
+  # turn on the proxy engine for the clients
   SSLProxyEngine on
+  # set the proxy to use only TLSv1.2
+  SSLProxyProtocol +TLSv1.2
 
   # created (as in the docs) by creating a proxy CA that is signed by the openshift master CA and then using that to create client crt and key for this node
   SSLProxyCACertificateFile /run/secrets/kubernetes.io/serviceaccount/ca.crt
