updated with client secret stuff

--- a/pivproxy.conf
+++ b/pivproxy.conf
@@ -66,11 +66,12 @@ SSLSessionCacheTimeout  300
   SSLProxyEngine on
   # set the proxy to use only TLSv1.2
   SSLProxyProtocol +TLSv1.2
+  # set proxy verify depth
+  SSLProxyVerifyDepth 5
 
   # created (as in the docs) by creating a proxy CA that is signed by the openshift master CA and then using that to create client crt and key for this node
   SSLProxyCACertificateFile /run/secrets/kubernetes.io/serviceaccount/ca.crt
-  SSLProxyMachineCertificateChainFile /run/secrets/kubernetes.io/serviceaccount/service-ca.crt
-  SSLProxyMachineCertificateFile /tmp/proxy_client.pem
+  SSLProxyMachineCertificateFile /client_secrets/piv_proxy.pem
 
   # set up additional logging (todo: does this matter?)
   ErrorLog /dev/stdout
