--- a/ose-pivproxy-deployment-template.yml
+++ b/ose-pivproxy-deployment-template.yml
@@ -51,6 +51,9 @@ objects:
           - mountPath: /piv
             name: ose-pivproxy-smartcard-ca-mount
             readOnly: true
+          - mountPath: /client_secrets
+            name: ose-pivproxy-client-secret-mount
+            readOnly: true
           ports:
           - containerPort: 8080
             protocol: TCP
@@ -79,6 +82,10 @@ objects:
           secret:
             secretName: ose-pivproxy-smartcard-ca
             defaultMode: 420
+        - name: ose-pivproxy-client-secret-mount
+          secret:
+            secretName: ose-pivproxy-client-secrets
+            defaultMode: 420            
         #- name: ose-pivproxy-config
         #  configMap:
         #    name: ose-pivproxy
