slightly modified for clearer logging

--- a/pivproxy.conf
+++ b/pivproxy.conf
@@ -33,8 +33,8 @@ SSLSessionCacheTimeout  300
 
 <VirtualHost *:8443>
   # server name and aliases for SNI and for client contact
-  ServerName ${BASE_NAME}.${CURRENT_NAMESPACE}.svc
-  ServerAlias ${PIVPROXY_PUBLIC_URL},${HOSTNAME},${BASE_NAME}.${CURRENT_NAMESPACE}.svc.cluster.local,${BASE_NAME}.${CURRENT_NAMESPACE}.svc,${BASE_NAME}
+  ServerName ${PIVPROXY_PUBLIC_URL}
+  ServerAlias ${BASE_NAME}.${CURRENT_NAMESPACE}.svc,${HOSTNAME},${BASE_NAME}.${CURRENT_NAMESPACE}.svc.cluster.local,${BASE_NAME}
 
   # root where documents are served from
   DocumentRoot /var/www/html
@@ -74,10 +74,7 @@ SSLSessionCacheTimeout  300
   SSLProxyMachineCertificateFile /client_secrets/piv_proxy.pem
 
   # set up additional logging (todo: does this matter?)
-  ErrorLog /dev/stdout
-  LogLevel debug
-  CustomLog /dev/stdout "%t %h %{SSL_PROTOCOL}x %{SSL_CIPHER}x \"%r\" %b"
-  TransferLog /dev/stdout
+  #CustomLog /dev/stdout "%t %h %{SSL_PROTOCOL}x %{SSL_CIPHER}x \"%r\" %b"
   
   #LogLevel debug
   #CustomLog logs/ssl_request_log "%t %h %{SSL_PROTOCOL}x %{SSL_CIPHER}x \"%r\" %b"
