--- a/pivproxy.conf
+++ b/pivproxy.conf
@@ -70,7 +70,7 @@ SSLSessionCacheTimeout  300
   SSLProxyVerifyDepth 5
 
   # created (as in the docs) by creating a proxy CA that is signed by the openshift master CA and then using that to create client crt and key for this node
-  SSLProxyCACertificateFile /run/secrets/kubernetes.io/serviceaccount/ca.crt
+  SSLProxyCACertificateFile /client_secrets/master-ca.crt
   SSLProxyMachineCertificateFile /client_secrets/piv_proxy.pem
 
   # set up additional logging (todo: does this matter?)
