configuration change to match what was working outside of the container

--- a/pivproxy.conf
+++ b/pivproxy.conf
@@ -67,7 +67,7 @@ SSLSessionCacheTimeout  300
   # set the proxy to use only TLSv1.2
   SSLProxyProtocol +TLSv1.2
   # set proxy verify depth
-  SSLProxyVerifyDepth 5
+  #SSLProxyVerifyDepth 5
 
   # created (as in the docs) by creating a proxy CA that is signed by the openshift master CA and then using that to create client crt and key for this node
   SSLProxyCACertificateFile /client_secrets/master-ca.crt
