changes to proxy configuration and Dockerfile to support logging levels change to deployment config template for same and to change permissions

--- a/pivproxy.conf
+++ b/pivproxy.conf
@@ -13,6 +13,7 @@ SSLRandomSeed connect builtin
 SSLCryptoDevice builtin
 
 # set log to stdout/stderr
+LogLevel debug
 ErrorLog /dev/stderr
 TransferLog /dev/stdout
 
@@ -75,8 +76,6 @@ SSLSessionCacheTimeout  300
 
   # set up additional logging (todo: does this matter?)
   #CustomLog /dev/stdout "%t %h %{SSL_PROTOCOL}x %{SSL_CIPHER}x \"%r\" %b"
-  
-  #LogLevel debug
   #CustomLog logs/ssl_request_log "%t %h %{SSL_PROTOCOL}x %{SSL_CIPHER}x \"%r\" %b"
 
   # Send all requests to the console
