dont need SSLUserName

--- a/pivproxy.conf
+++ b/pivproxy.conf
@@ -54,7 +54,7 @@ SSLSessionCacheTimeout  300
   SSLCACertificateFile /piv/smartcard-ca.crt
 
   # set up variables and export them
-  SSLUserName SSL_CLIENT_S_DN_CN
+  #SSLUserName SSL_CLIENT_S_DN_CN
   SSLOptions +StdEnvVars +ExportCertData
 
   # used in the individial location segments below, not at the root
