cant set loglevel

--- a/pivproxy.conf
+++ b/pivproxy.conf
@@ -13,7 +13,7 @@ SSLRandomSeed connect builtin
 SSLCryptoDevice builtin
 
 # set log to stdout/stderr
-LogLevel ${PROXY_LOG_LEVEL}
+LogLevel trace:5
 ErrorLog /dev/stderr
 TransferLog /dev/stdout
 
