--- a/pivproxy.conf
+++ b/pivproxy.conf
@@ -13,7 +13,7 @@ SSLRandomSeed connect builtin
 SSLCryptoDevice builtin
 
 # set log to stdout/stderr
-LogLevel trace:5
+LogLevel ${PROXY_LOG_LEVEL}
 ErrorLog /dev/stderr
 TransferLog /dev/stdout
 
