the SSLUserName is required

--- a/pivproxy.conf
+++ b/pivproxy.conf
@@ -53,8 +53,14 @@ SSLSessionCacheTimeout  300
   # This is the CA against which user's certificates will be checked.
   SSLCACertificateFile /piv/smartcard-ca.crt
 
-  # set up variables and export them
-  #SSLUserName SSL_CLIENT_S_DN_CN
+  # when not trying to get the health of the server 
+  # we can use the SSL_CLIENT_S_DN_CN as the user name
+  # which will be used for the valid-user requirement later
+  <LocationMatch "^/(?!healthz.html)">
+    SSLUserName SSL_CLIENT_S_DN_CN
+  </LocationMatch>
+
+  # set up variables and export them  
   SSLOptions +StdEnvVars +ExportCertData
 
   # used in the individial location segments below, not at the root
