added common issues to the README, removed voodoo from start.sh, added more comment in the pivproxy.conf

--- a/pivproxy.conf
+++ b/pivproxy.conf
@@ -56,6 +56,7 @@ SSLSessionCacheTimeout  300
   # when not trying to get the health of the server 
   # we can use the SSL_CLIENT_S_DN_CN as the user name
   # which will be used for the valid-user requirement later
+  # (letting this directive be used for the health check caues spurious errors)
   <LocationMatch "^/(?!healthz.html)">
     SSLUserName SSL_CLIENT_S_DN_CN
   </LocationMatch>
