fixed some spelling issues and spacing

--- a/pivproxy.conf
+++ b/pivproxy.conf
@@ -8,7 +8,7 @@ ServerName ${HOSTNAME}
 Options -Indexes
 
 # copied from default ssl.conf
-SSLRandomSeed startup file:/dev/urandom  256
+SSLRandomSeed startup file:/dev/urandom 256
 SSLRandomSeed connect builtin
 SSLCryptoDevice builtin
 
@@ -22,7 +22,7 @@ LoadModule request_module modules/mod_request.so
 
 # set ssl session cache location
 SSLSessionCache "shmcb:logs/ssl_cache(512000)"
-SSLSessionCacheTimeout  300
+SSLSessionCacheTimeout 300
 
 # Nothing needs to be served over HTTP. This virtual host simply redirects to
 # HTTPS.
@@ -53,7 +53,7 @@ SSLSessionCacheTimeout  300
   # This is the CA against which user's certificates will be checked.
   SSLCACertificateFile /piv/smartcard-ca.crt
 
-  # when not trying to get the health of the server 
+  # when not trying to get the health of the server
   # we can use the SSL_CLIENT_S_DN_CN as the user name
   # which will be used for the valid-user requirement later
   # (letting this directive be used for the health check caues spurious errors)
@@ -61,14 +61,14 @@ SSLSessionCacheTimeout  300
     SSLUserName SSL_CLIENT_S_DN_CN
   </LocationMatch>
 
-  # set up variables and export them  
+  # set up variables and export them
   SSLOptions +StdEnvVars +ExportCertData
 
-  # used in the individial location segments below, not at the root
+  # used in the individual location segments below, not at the root
   #SSLVerifyClient require
 
-  # max verification depth	
-  SSLVerifyDepth 5 
+  # max verification depth
+  SSLVerifyDepth 5
 
   # turn on the proxy engine for the clients
   SSLProxyEngine on
@@ -94,7 +94,7 @@ SSLSessionCacheTimeout  300
   RewriteCond %{HTTP:X-Csrf-Token} ^$ [NC]
   RewriteRule ^.* - [F,L]
 
-  # allow rewrite rules access to the lolower function
+  # allow rewrite rules access to the tolower function
   RewriteMap lc int:tolower
 
   <Location /challenging-proxy/oauth/authorize>
@@ -126,10 +126,10 @@ SSLSessionCacheTimeout  300
     # and you need to use the SSL: reference
     # the variable looks like `abc1@agency.gov` from the smart card's certificate
     RewriteRule ^.* - [E=X_LOWER_USER:${lc:%{SSL:SSL_CLIENT_SAN_OTHER_msUPN_0}},L]
-    
+
     # use the lower case variable from the cert (now `abc1@agency.gov`)
     RequestHeader set X-Remote-User "%{X_LOWER_USER}e" env=X_LOWER_USER
-    
+
     # rewrite the above variable to strip the `@agency.gov` portion
     RequestHeader edit X-Remote-User "([^@]+)@.*" $1
 
