some slight fixes to the default proxy configuration

--- a/pivproxy.conf
+++ b/pivproxy.conf
@@ -53,8 +53,8 @@ SSLSessionCacheTimeout 300
   # when not trying to get the health of the server
   # we can use the SSL_CLIENT_S_DN_CN as the user name
   # which will be used for the valid-user requirement later
-  # (letting this directive be used for the health check caues spurious errors)
-  <LocationMatch "^/(?!healthz.html)">
+  # (letting this directive be used for the health check causes spurious "Failed to set SSL_CLIENT_S_DN_CN" errors)
+  <LocationMatch "^/(?!healthz\.html)|(?!index\.html)">
     SSLUserName SSL_CLIENT_S_DN_CN
   </LocationMatch>
 
