readme updated for compatibility with 3.10+ and newer commands pivproxy.conf updated to support better non-email username syntax handling right out of the box

--- a/pivproxy.conf
+++ b/pivproxy.conf
@@ -119,7 +119,7 @@ SSLSessionCacheTimeout 300
     RequestHeader set X-Remote-User "%{X_LOWER_USER}e" env=X_LOWER_USER
 
     # rewrite the above variable to strip the `@agency.gov` portion
-    RequestHeader edit X-Remote-User "([^@]+)@.*" $1
+    RequestHeader edit X-Remote-User "([^@]+)(@.*)?" $1
 
   </ProxyMatch>
 </VirtualHost>
